--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "chai": "^4.2.0",
-    "chai-http": "^4.2.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit test/*",
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC"
