--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "method-override": "^3.0.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.1"
   },
   "devDependencies": {
