--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
-    "mongoose": "^5.3.1"
+    "mongoose": "^5.3.1",
+    "mongoose-paginate": "^5.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
