--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "handlebars": "^4.1.0",
+    "handlebars-helpers": "^0.10.0",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
     "mongoose": "^5.3.1",
